fix: cross browser wrap change
adds whitespace reset where
needed for cross browser support

--- a/style.css
+++ b/style.css
@@ -288,3 +288,7 @@ input.large {
   background: var(--fg-light);
   color: var(--bg-light);
 }
+
+.no-wrap{
+  white-space: nowrap;
+}
